<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityCronometro"
        android:background="@color/blanco">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/txt_Titulo"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/txt_Tiempo"
            android:textSize="49sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_Reiniciar"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_Iniciar"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_Detener"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Siguiente"
            android:text="@string/btn_Volver"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>